--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <form action="">
+        <input type="text">
+    </form>
     <button>Run</button>
     
 </body>
